--- a/city-register/pom.xml
+++ b/city-register/pom.xml
@@ -6,7 +6,8 @@
 
     <groupId>edu.javacourse.ext</groupId>
     <artifactId>city-register</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
+    <packaging>war</packaging>
     <build>
         <plugins>
             <plugin>
@@ -17,6 +18,15 @@
                     <target>8</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
+
+
         </plugins>
     </build>
 
